# pyFluigi

./: .gitignore  .gitmodules  Notes.md  Pipfile  README.md  cmdline.py  javaconnector.py  parameters.py  primitives.py  pyfluigi.code-workspace  pyproject.toml  pytest.ini  scripts.py  test.mint  test.py  test_composite.py  test_place.py
.devcontainer/: Dockerfile  devcontainer.json
fluigi/: cmdline.py  cmdlineV2.py  conversions.py  hypergraph_models.py  javaconnector.py  json_info_remove.py  parameters.py  place_and_route.py  primitives.py  synthesis.py  utils.py
fluigi/pnr/: aarf.py  cell.py  layout.py  net.py  place_and_route.py  svgdraw.py  terminal.py  terminalassignment.py  utils.py
fluigi/pnr/hola/: adaptagrams.py  adaptagrams_wrap.h
fluigi/pnr/placement/: graph.py  simulatedannealing.py
fluigi/pnr/sa/: layoutgrid.py  salayout.py  saplace.py  utils.py
fluigi/pnr/sfc/: compositecell.py  port_spread.py  primitivecell.py  spacer_insert.py  utils.py
pnr/: cell.py  layout.py  net.py  svgdraw.py  terminalassignment.py
pnr/placement/: graph.py  simulatedannealing.py
primitives/: index.js  package-lock.json  package.json
scripts/: convert.sh  par.sh  sanitation-test.sh  test.py  test.sh  test_chthesis.sh  test_dropx.sh  test_grid.sh  test_primitives.sh
tests/: conftest.py
tests/fluigi/: test_conversion.py
tests/fluigi/pnr/sfc/: test_compositecell.py  test_port_spread.py  test_primitivecell.py  test_spacer_insert.py  test_utils.py
