[tool.poetry]
name = "fluigi"
version = "0.1.0"
description = "Place and route engine"
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-Clause-3"

include = [
    "bin/*"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
argparse = "^1.4.0"
pydot = "^1.4.1"
matplotlib = "^3.3.2"
pyfiglet = "^0.8.post1"
pygraphviz = "^1.6"
requests = "^2.24.0"
pycairo = "^1.20.0"
numpy = "^1.19.4"
tabulate = "^0.8.9"
pyeda = "^0.28.0"
networkx = "^3.0"
art = "^5.6"
lfr = {path = "./pylfr", develop = true}
click = "^8.1.3"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
black = "22.3.0"
flake8 = "^3.8.4"
rope = "^0.18.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fluigi = "fluigi.cmdline:default_cli"
test = 'scripts:test'
benchmark = 'scripts:benchmark'

[tool.isort]
profile = "black"
src_paths = ["fluigi"]

[tool.black]
line-length = 120
